<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Popular Movies App Stage 1</string>
    <string name="detail_title" translatable="false">Title</string>
    <string name="original_title" translatable="false">Original Title</string>
    <string name="detail_release_date" translatable="false">Release Date</string>
    <string name="vote_average" translatable="false">Viewer Rating</string>
    <string name="plot_synopsis">Plot</string>
    <string name="no_connection">Internet connection is needed to access information.</string>

    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="movie_thumb_image">Movie Thumb Image</string>
    <string name="movie_poster_action">Click on poster for more details.</string>
    <string name="details">Details</string>

    <string name="pref_sort_label" translatable="false">Sort Order</string>
    <string name="pref_sort_popular" translatable="false">Most Popular</string>
    <string name="pref_sort_rating" translatable="false">Highest Rating</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="pref_sort_key" translatable="false">Sort Key</string>

</resources>
