<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="500dp"-->
        <!--android:fitsSystemWindows="true"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >-->

    <!--<android.support.design.widget.CollapsingToolbarLayout-->
        <!--android:id="@+id/collapsing_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:contentScrim="?attr/colorPrimary"-->
        <!--app:expandedTitleMarginEnd="64dp"-->
        <!--app:expandedTitleMarginStart="48dp"-->
        <!--app:expandedTitleTextAppearance="@android:color/transparent"-->
        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed" >-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/movie_thumb_iv"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_thumb_image"
                android:padding="8dp" />

            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_thumb_iv"
                android:text="@string/original_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/original_title_tv"
                android:text="@string/detail_release_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/vote_average_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_tv"
                android:text="@string/vote_average"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vote_average_tv"
                android:text="@string/plot_synopsis"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


        </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>
    <!--</android.support.design.widget.CollapsingToolbarLayout>-->
    <!--</android.support.design.widget.AppBarLayout>-->

</LinearLayout>